Prevent horizontal scroll

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -12,7 +12,7 @@ $lighter_gray:	#CCC;
 $light_gray: 	#999;
 $gray:       	#666;
 $dark_gray:  	#333;
-$black:		 	#000;
+$black:		 	#222;
 
 $blue:		 	#093B5C;
 
