--- a/src/assets/scss/breakpoints/_base.scss
+++ b/src/assets/scss/breakpoints/_base.scss
@@ -1,7 +1,9 @@
 /**********************************
  * General
  *********************************/
-
+body {
+    overflow-x: hidden;
+}
 h1, h2, h3, h4, h5, h6 {
     font-family: $headline-stack;
 }
@@ -166,6 +168,7 @@ h1, h2, h3, h4, h5, h6 {
  *********************************/
 header {
     background: $dark_gray;
+    border-top: 8px solid $black;
     padding: 5px;
     margin-bottom: 20px;
 
